# AoCLeaderboardBot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json.template  leaderboard.py  main.py  pyproject.toml
.github/: docker-push.yaml
.github/workflows/: docker-push.yaml
