[project]
name = "aocleaderboardbot"
version = "0.1.0"
description = "Dead simple self hostable AoC leaderboard bot"
authors = [
    { name = "Jay Madden", email = "jaymaddencox@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "discord.py>=2.6.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
